Don't call NOTIMPLEMENTED for caps lock state on non-Mac/Win platforms.

BUG=618739

Review-Url: https://codereview.chromium.org/2748993004
Cr-Commit-Position: refs/heads/master@{#457043}

Former-commit-id: 7599eb3eee0daef81cef0bdf79294849b5d52e6d